# sjyinzju_blog

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: alembic.ini  blog_backup.sql  main.py  mcp_server.py  mcp_stdio_bridge.py  mcp_tools.py  pyproject.toml  requirements.txt  safe_backup.sql  stderr.txt  stdout.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_posts_table.py  002_create_users_table.py  003_create_likes_comments.py  004_rename_tags_to_categories.py  005_add_tags_to_posts.py  006_add_internal_links_to_posts.py  007_add_soft_delete_to_posts_comments.py  008_add_pgvector_embedding.py
backend/core/: config.py  deps.py  embeddings.py  limiter.py  mcp_security.py  security.py
backend/models/: __init__.py  comment.py  like.py  post.py  user.py
backend/routers/: auth.py  media.py  posts.py  social.py  stats.py
backend/schemas/: post.py  social.py  user.py
backend/utils/: storage.py
deploy/: README.md
deploy/caddy/: Caddyfile
deploy/nginx/: mcp.conf
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: ActivityCalendar.tsx  ArticleContent.tsx  CommentsSection.tsx  FieldRow.tsx  FormPageHero.tsx  HeroSection.tsx  HighlightText.tsx  InteractiveGrid.tsx  KnowledgeGraph.tsx  MarkdownViewer.tsx  MottoLines.tsx  Navbar.tsx  PageContent.tsx  PostListItem.tsx  SearchModal.tsx  SectionBlock.tsx  SocialListItem.tsx  (+5 more)
scripts/: sync_posts.py
(+34 files in other folders)
