[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "bcrypt>=4.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
    "openai>=2.41.0",
    "pgvector>=0.4.2",
    "tenacity>=9.1.4",
]
